# sentienl

./: .gitignore  CLAUDE.md  README.md  TODO.md  config.yaml.example  pyproject.toml  requirements-dev.txt  requirements.txt  sentinel_prd.md  sentinel_prd_review.md
docs/: architecture.md  correlated-event-2026-06-03.md  improvement-plans.md  sentinel-analysis-2026-06-10.md
sentinel/: __init__.py
sentinel/collectors/: correlation_detector.py  futures_runner.py  futures_volume.py  kalshi.py  kalshi_runner.py  polymarket.py  polymarket_runner.py  truth_social.py  truth_social_client.py  truth_social_runner.py
sentinel/core/: config.py  db.py
sentinel/dashboard/: app.py
sentinel/dispatcher/: alerter.py  alerter_runner.py
sentinel/scripts/: healthcheck.py  init_db.py  test_alert.py
systemd/: sentinel-alerter.service  sentinel-dashboard.service  sentinel-futures.service  sentinel-polymarket.service  sentinel-truth.service
tests/unit/: test_alerter.py  test_config.py  test_correlation_detector.py  test_dashboard.py  test_db.py  test_futures_volume.py  test_kalshi.py  test_polymarket.py  test_truth_social.py
