[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sentinel"
version = "1.0.0"
description = "Geopolitical signal monitoring system"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "flask>=3.0.3",
    "yfinance>=0.2.40",
    "requests>=2.31.0",
    "alpaca-py>=0.29.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["sentinel"]
omit = ["tests/*", "sentinel/scripts/*"]
